# alta-tool

./: .gitignore  CMakeLists.txt  README.md
cmake/: Windeployqt.cmake
src/: CMakeLists.txt  altaprinter.cpp  altaprinter.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  mainWindow.ui  serial.cpp  serial.hpp  serialManager.cpp  serialManager.hpp  serialManager.ui  serialWidget.cpp  serialWidget.hpp  serialWidget.ui  stateMachine.cpp  stateMachine.hpp
src/resources/: CalibBackPoint.gcode  CalibFrontLeft.gcode  CalibFrontRight.gcode  endcode.gcode
